--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
         <activity
             android:name=".DrawerActivity"
             android:exported="false"
-            android:theme="@style/Theme.ParkifyApp.NoActionBar" >
-        </activity>
+            android:label="@string/title_activity_drawer"
+            android:theme="@style/Theme.ParkifyApp.NoActionBar" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
@@ -30,6 +30,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
